--- a/8. Generative AI with Large Language Models [Deep_learning.ai ].md
+++ b/8. Generative AI with Large Language Models [Deep_learning.ai ].md
@@ -3,8 +3,7 @@ LLM : Large Language Model
 Generative Ai: Sub branch of machine learning
 Introduction to LLMs and the generative AI project lifecycle
 
-![alt text](image.png)
- 
+ ![alt text](images/image.png)
 
 Use cases: 
 -	Text generation (Ask model to generate an essay) 
@@ -19,7 +18,7 @@ Text generation before transformers:
 -	Previous generations of language made use of an architecture called RNN (Recurrent Neural Networks) 
 -	RNN were limited by the amount of compute and memory needed to perform well at generative tasks
 -	RNN carrying out a simple prediction generative task:
--	 ![alt text](image-1.png)
+-	 ![alt text](images/image-1.png)
 -	RNN did good here, but significantly scaled the resources
 -	 
 -	But it failed here , even after scaling:  
